--- a/project.json
+++ b/project.json
@@ -8,10 +8,15 @@
     "renderMode" : 0,
     "engineDir":"frameworks/cocos2d-html5",
 
-    "modules" : ["cocos2d"],
+    "modules" : [
+      "cocos2d",
+      "extensions"
+    ],
 
     "jsList" : [
         "src/resource.js",
+        "src/common/view/ModalLayer.js",
+        "src/InputNameLayer.js",
         "src/app.js"
     ]
 }
