--- a/project.json
+++ b/project.json
@@ -15,8 +15,10 @@
 
     "jsList" : [
         "src/resource.js",
+        "lib/parse-1.4.2.min.js",
         "src/common/view/ModalLayer.js",
         "src/InputNameLayer.js",
-        "src/app.js"
+        "src/app.js",
+        "src/game.js"
     ]
 }
