--- a/project.json
+++ b/project.json
@@ -16,6 +16,7 @@
     "jsList" : [
         "src/resource.js",
         "vendor/parse-1.4.2.min.js",
+        "src/test/testData.js",
         "src/common/view/ModalLayer.js",
         "src/view/InputNameLayer.js",
         "src/view/TitleScene.js",
