--- a/project.json
+++ b/project.json
@@ -15,8 +15,10 @@
 
     "jsList" : [
         "src/resource.js",
+        "vendor/underscore-min.js",
         "vendor/parse-1.4.2.min.js",
         "lib/statemachine.js",
+        "lib/queue.js",
         "src/test/testData.js",
         "src/common/view/ModalLayer.js",
         "src/view/DialogLayer.js",
