--- a/project.json
+++ b/project.json
@@ -22,6 +22,7 @@
         "src/test/testData.js",
         "src/common/view/ModalLayer.js",
         "src/view/DialogLayer.js",
+        "src/view/DialogSelectLayer.js",
         "src/view/InputNameLayer.js",
         "src/view/TitleScene.js",
         "src/view/game.js"
