--- a/project.json
+++ b/project.json
@@ -30,6 +30,7 @@
         "src/view/SpaceLayer.js",
         "src/view/GameBgLayer.js",
         "src/view/PlayerLayer.js",
+        "src/view/ChartLayer.js",
         "src/view/StatusLayer.js",
         "src/view/GameScene.js"
     ]
