--- a/project.json
+++ b/project.json
@@ -21,6 +21,7 @@
         "src/lib/queue.js",
         "src/test/testData.js",
         "src/common/view/ModalLayer.js",
+        "src/view/LoadingIndicatorLayer.js",
         "src/view/DialogLayer.js",
         "src/view/RouletteNode.js",
         "src/view/RouletteLayer.js",
@@ -32,6 +33,7 @@
         "src/view/PlayerLayer.js",
         "src/view/ChartLayer.js",
         "src/view/StatusLayer.js",
+        "src/view/TitleScene.js",
         "src/view/GameScene.js"
     ]
 }
